--- a/app/assets/stylesheets/components/question/question_form.scss
+++ b/app/assets/stylesheets/components/question/question_form.scss
@@ -3,19 +3,23 @@
 }
 .question_form-element {
     display: flex; 
+    // flex: 1 1 0px; 
+    // overflow-x: auto; 
 }
 
 .RichEditor-root {
   background: #fff;
-  border: 1px solid $silver;
-  border-radius: 5px; 
-  font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
-  font-size: 0.8rem; 
+  border: 1px solid #ddd;
+  font-family: 'Consolas';
+  font-size: 1rem;
+  padding: 15px;
+  width: 50vw;
+  overflow-x: hidden; 
+  overflow-y: auto; 
 }
 
 .RichEditor-editor {
   border-top: 1px solid #ddd;
-  padding: 1rem; 
   cursor: text;
   font-size: 16px;
   margin-top: 10px;
@@ -23,8 +27,8 @@
 
 .RichEditor-editor .public-DraftEditorPlaceholder-root,
 .RichEditor-editor .public-DraftEditor-content {
-//   margin: 0 -15px -15px;
-//   padding: 15px;
+  margin: 0 -15px -15px;
+  padding: 15px;
 }
 
 .RichEditor-editor .public-DraftEditor-content {
@@ -40,30 +44,34 @@
   color: #666;
   font-family: 'Hoefler Text', 'Georgia', serif;
   font-style: italic;
-//   margin: 16px 0;
+  margin: 16px 0;
   padding: 10px 20px;
 }
 
-.RichEditor-editor .public-DraftStyleDefault-pre {
+pre {
+  overflow-x: scroll; 
+  margin-right: 2rem; 
+}
+.RichEditor-editor .public-DraftStyleDefault-pre > pre {
   background-color: rgba(0, 0, 0, 0.05);
   font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
   font-size: 16px;
   padding: 20px;
+  margin-bottom: 20px;
 }
 
 .RichEditor-controls {
-    padding: 0.25rem; 
   font-family: 'Helvetica', sans-serif;
-  font-size: 1rem;
+  font-size: 14px;
+  margin-bottom: 5px;
   user-select: none;
 }
 
 .RichEditor-styleButton {
-  color: $black; 
-  padding: 0.5rem; 
+  color: #999;
   cursor: pointer;
-//   margin-right: 16px;
-//   padding: 2px 0;
+  margin-right: 16px;
+  padding: 2px 0;
   display: inline-block;
 }
 
